Use modular-toolkit
modular-toolkit is based on a useful structure, that will serve as the
foundation of werkstatt's UI. The set up has been done by copying the
example app from the modular-toolkit. Thus there might be some code,
that has not been removed from the example.

--- a/web/package.json
+++ b/web/package.json
@@ -1,26 +1,37 @@
 {
-    "name": "werkstatt-web",
+    "name": "werkstatt",
     "version": "0.1.0",
-    "main": "index.js",
-    "private": true,
+    "description": "A place to program in your browser.",
+    "main": "src/index.js",
     "scripts": {
-        "build": "neutrino build",
-        "start": "neutrino start",
-        "lint": "neutrino lint",
-        "test": "neutrino test"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
     },
-    "author": "",
+    "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
     "license": "MIT",
     "dependencies": {
-        "prop-types": "^15.6.2",
-        "react": "^16.6.1",
-        "react-dom": "^16.6.1",
-        "react-hot-loader": "^4.3.12"
+        "@modular-toolkit/bricks": "^1.1.0",
+        "@modular-toolkit/hocs": "^4.0.2",
+        "@modular-toolkit/selectors": "^3.0.2",
+        "react": "^16.6.0",
+        "react-dom": "^16.6.0",
+        "react-redux": "^5.0.7",
+        "react-scripts": "^2.0.5",
+        "recompose": "^0.30.0",
+        "redux": "^4.0.1",
+        "redux-saga": "^0.16.2",
+        "reedux": "^0.1.3",
+        "reselect": "^4.0.0"
     },
     "devDependencies": {
-        "@neutrinojs/eslint": "^8.3.0",
-        "@neutrinojs/jest": "^8.3.0",
-        "@neutrinojs/react": "^8.3.0",
-        "neutrino": "^8.3.0"
-    }
+        "prop-types": "^15.6.1"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
