--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+**/.cache
+
+# IntelliJ IDEA
+.idea
+*.iml
+
+# Logs
+npm-debug.log*
+lerna-debug.log*
+
+# Dependency directories
+node_modules/
+
