--- a/web/package.json
+++ b/web/package.json
@@ -1,42 +1,44 @@
 {
-    "name": "werkstatt",
-    "version": "0.1.0",
-    "description": "A place to program in your browser.",
-    "main": "src/index.js",
-    "private": true,
-    "scripts": {
-        "build": "neutrino build",
-        "start": "neutrino start",
-        "lint": "neutrino lint",
-        "test": "neutrino test"
-    },
-    "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
-    "license": "MIT",
-    "dependencies": {
-        "@modular-toolkit/bricks": "^1.1.0",
-        "@modular-toolkit/hocs": "^4.0.2",
-        "@modular-toolkit/selectors": "^3.0.2",
-        "react": "^16.6.1",
-        "react-dom": "^16.6.1",
-        "react-redux": "^5.0.7",
-        "recompose": "^0.30.0",
-        "redux": "^4.0.1",
-        "redux-saga": "^0.16.2",
-        "reedux": "^0.1.3",
-        "reselect": "^4.0.0",
-        "react-hot-loader": "^4.3.12"
-    },
-    "devDependencies": {
-        "@neutrinojs/eslint": "^8.3.0",
-        "@neutrinojs/jest": "^8.3.0",
-        "@neutrinojs/react": "^8.3.0",
-        "neutrino": "^8.3.0",
-        "prop-types": "^15.6.1"
-    },
-    "browserslist": [
-        "last 1 version",
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-    ]
+  "name": "werkstatt",
+  "version": "0.1.0",
+  "description": "A place to program in your browser.",
+  "main": "src/index.js",
+  "private": true,
+  "scripts": {
+    "build": "neutrino build",
+    "start": "neutrino start",
+    "lint": "neutrino lint",
+    "test": "neutrino test",
+    "format": "prettier --write '**/*.{js,css}'"
+  },
+  "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
+  "license": "MIT",
+  "dependencies": {
+    "@modular-toolkit/bricks": "^1.1.0",
+    "@modular-toolkit/hocs": "^4.0.2",
+    "@modular-toolkit/selectors": "^3.0.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.0.7",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "reedux": "^0.1.3",
+    "reselect": "^4.0.0",
+    "react-hot-loader": "^4.3.12"
+  },
+  "devDependencies": {
+    "@neutrinojs/eslint": "^8.3.0",
+    "@neutrinojs/jest": "^8.3.0",
+    "@neutrinojs/react": "^8.3.0",
+    "neutrino": "^8.3.0",
+    "prettier": "1.15.2",
+    "prop-types": "^15.6.1"
+  },
+  "browserslist": [
+    "last 1 version",
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
