--- a/web/package.json
+++ b/web/package.json
@@ -2,13 +2,13 @@
   "name": "werkstatt",
   "version": "0.1.0",
   "description": "A place to program in your browser.",
-  "main": "src/index.js",
+  "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "neutrino build",
-    "start": "neutrino start",
-    "lint": "neutrino lint",
-    "test": "neutrino test",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
+    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test",
+    "test": "jest",
     "format": "prettier --write '**/*.{js,css}'"
   },
   "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
@@ -17,8 +17,9 @@
     "@modular-toolkit/bricks": "^1.1.0",
     "@modular-toolkit/hocs": "^4.0.2",
     "@modular-toolkit/selectors": "^3.0.2",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-redux": "^5.0.7",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
@@ -28,12 +29,15 @@
     "react-hot-loader": "^4.3.12"
   },
   "devDependencies": {
-    "@neutrinojs/eslint": "^8.3.0",
-    "@neutrinojs/jest": "^8.3.0",
-    "@neutrinojs/react": "^8.3.0",
-    "neutrino": "^8.3.0",
+    "@neutrinojs/eslint": "^9.0.0-beta.1",
+    "@neutrinojs/jest": "^9.0.0-beta.1",
+    "@neutrinojs/react": "^9.0.0-beta.1",
+    "jest": "^23.6.0",
+    "neutrino": "^9.0.0-beta.1",
     "prettier": "1.15.2",
-    "prop-types": "^15.6.1"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "browserslist": [
     "last 1 version",
