--- a/web/package.json
+++ b/web/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test",
-    "test": "jest",
-    "format": "prettier --write '**/*.{js,css}'"
+    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src",
+    "lint-fix": "eslint --cache --fix --format codeframe --ext mjs,jsx,js src",
+    "test": "jest"
   },
   "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
   "license": "MIT",
@@ -32,9 +32,10 @@
     "@neutrinojs/eslint": "^9.0.0-beta.1",
     "@neutrinojs/jest": "^9.0.0-beta.1",
     "@neutrinojs/react": "^9.0.0-beta.1",
+    "@neutrinojs/standardjs": "^9.0.0-beta.1",
+    "eslint": "^5.9.0",
     "jest": "^23.6.0",
     "neutrino": "^9.0.0-beta.1",
-    "prettier": "1.15.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
