--- a/web/package.json
+++ b/web/package.json
@@ -32,8 +32,13 @@
     "@neutrinojs/eslint": "^9.0.0-beta.1",
     "@neutrinojs/jest": "^9.0.0-beta.1",
     "@neutrinojs/react": "^9.0.0-beta.1",
-    "@neutrinojs/standardjs": "^9.0.0-beta.1",
     "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
     "neutrino": "^9.0.0-beta.1",
     "webpack": "^4.25.1",
