--- a/web/package.json
+++ b/web/package.json
@@ -14,16 +14,17 @@
   "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
   "license": "MIT",
   "dependencies": {
+    "codemirror": "^5.42.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-hot-loader": "^4.3.12",
     "react-redux": "^5.0.7",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "reedux": "^0.1.3",
-    "reselect": "^4.0.0",
-    "react-hot-loader": "^4.3.12"
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@neutrinojs/eslint": "^9.0.0-beta.1",
