--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^5.0.7",
+    "recharts": "^1.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
