--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "reedux": "^0.1.3",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "@neutrinojs/eslint": "^9.0.0-beta.1",
