Enforce usage of min Node and NPM versions
To avoid issues with older versions of Node or NPM the minimum versions
should be enforced.

--- a/web/package.json
+++ b/web/package.json
@@ -52,5 +52,9 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": ">=10",
+    "npm": ">=6.4.1"
+  }
 }
