--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
