--- a/ui/package.json
+++ b/ui/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src",
     "lint-fix": "eslint --cache --fix --format codeframe --ext mjs,jsx,js src",
-    "test": "jest"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "Jan Ehrhardt <janehrhardt@ebay.com>",
   "license": "MIT",
@@ -32,9 +33,7 @@
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
-    "@neutrinojs/eslint": "^9.0.0-beta.1",
-    "@neutrinojs/jest": "^9.0.0-beta.1",
-    "@neutrinojs/react": "^9.0.0-beta.1",
+    "react-scripts": "2.1.1",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-jsx": "^6.0.2",
@@ -42,11 +41,14 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "neutrino": "^9.0.0-beta.1",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "jest": "^23.6.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "standard",
+      "standard-jsx"
+    ]
   },
   "browserslist": [
     "last 1 version",
