--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
