--- a/ui/package.json
+++ b/ui/package.json
@@ -33,7 +33,6 @@
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
-    "react-scripts": "2.1.1",
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-jsx": "^6.0.2",
@@ -41,7 +40,8 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "react-scripts": "^2.1.3"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
