--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf ../server/static && mv build ../server/static",
+    "build": "react-scripts build",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src",
     "lint-fix": "eslint --cache --fix --format codeframe --ext mjs,jsx,js src",
     "test": "react-scripts test",
