--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3.4'
 services:
+  server:
+    build:
+      context: .
+      target: build-server
+    depends_on:
+      - db
+    volumes:
+      - ./server:/werkstatt/server
+      - ./migrations:/werkstatt/migrations
+    ports:
+      - '5000:5000'
+    environment:
+      FLASK_APP: server
+      FLASK_ENV: development
+      PYTHONPATH: /werkstatt/requirements
+    networks:
+      - default
+    command: requirements/bin/flask run --host=0.0.0.0
+
   db:
     image: 'postgres:11-alpine'
     ports:
@@ -8,3 +27,5 @@ services:
       POSTGRES_USER: werkstatt
       POSTGRES_PASSWORD: werkstatt
       POSTGRES_DB: werkstatt
+    networks:
+      - default
